--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -48,9 +48,9 @@
         "Announcement: #pro# has joined Team #team#",
         "#gatherer#"
     ],
-    "graphicAnnouncement"    : [
-        "Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg htmlImgString=\"#mtgSetLogoImage#\"}",
-        "[_nextSet:The next set,The next fall set,#codename.capitalize#][_verbphrase:is actually,is really named,will be named]#_nextSet# #_verbphrase# [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg htmlImgString=\"#mtgSetLogoImage#\"}"
+    "graphicAnnouncement": [
+        "Wizards Announces: [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg htmlImgString=`#mtgSetLogoImage#` width=`600` height=`300` padding=`12` backgroundColor=`0x000000FF`}",
+        "[_nextSet:The next set,The next fall set,#codename.capitalize#][_verbphrase:is actually,is really named,will be named]#_nextSet# #_verbphrase# [_cardset:#novelCardSetName.capitalizeAll#]#_cardset#{htmlImg htmlImgString=`#mtgSetLogoImage#` width=`600`, height=`300` padding=`12` backgroundColor=`0x000000FF`}"
     ],
     "realization": [
         "#realize#",
