Fix svg strings to use " internally and  wrapped around them

--- a/src/data/grammar/mtg-keep-or-mulligan.yaml
+++ b/src/data/grammar/mtg-keep-or-mulligan.yaml
@@ -1,6 +1,6 @@
 ---
 headlineKeepOrMulligan: >
-  [_format:#format#][_headerText:#svgMulliganHeaderText#][#svgMulliganBodyText#]#svgMulliganStatusText# {svg svgString="#svgMulligan#"}
+  [_format:#format#][_headerText:#svgMulliganHeaderText#][#svgMulliganBodyText#]#svgMulliganStatusText# {svg svgString=`#svgMulligan#`}
 svgMulliganStatusText:
 - "Keep or Mulligan? With #pro#"
 - "Keep or Mulligan? #_format# Edition"
