--- a/src/data/grammar/mtg-in-graphics.yaml
+++ b/src/data/grammar/mtg-in-graphics.yaml
@@ -1,6 +1,6 @@
 {
   "inGraphics": [
-      "[_card1:#realCard#][_card2:#realCard#][_headline:#inGraphicsHeadline#]#inGraphicsText#{svg svgString=\"#inGraphicsImage#\"}"
+      "[_card1:#realCard#][_card2:#realCard#][_headline:#inGraphicsHeadline#]#inGraphicsText#{svg svgString=`#inGraphicsImage#`}"
   ],
   "inGraphicsText": [
       "IN GRAPHICS: #_headline#",
