--- a/src/data/grammar/numbers.yaml
+++ b/src/data/grammar/numbers.yaml
@@ -51,6 +51,9 @@
     "priceUSD": [
         "$#num1-999#", "$#num1-999#.#num0-9##num0-9#"
     ],
+    "priceTix": [
+        "#num1-9# event tickets", "#num1-9##num0-9# event tickets"
+    ],
     "num0-9": ["0","1","2","3","4","5","6","7","8","9"],
     "num1-9": ["1","2","3","4","5","6","7","8","9"],
     "num2-9": ["2","3","4","5","6","7","8","9"],
