more npc titles; smattering of vocab

--- a/src/data/grammar/mtg-cards.yaml
+++ b/src/data/grammar/mtg-cards.yaml
@@ -310,11 +310,13 @@
       "Winter Orb",
       "Wurmcoil Engine",
       "Yawgmoth's Will",
-      "Young Pyromancer"
+      "Young Pyromancer",
+      "Zuran Orb"
   ],
   "realBadCard":
   [
       "Barktooth Warbeard",
+      "Blizzard",
       "Chaoslace",
       "Crookshank Kobolds",
       "Cyclopean Mummy",
@@ -323,6 +325,7 @@
       "Eager Cadet",
       "Floral Spuzzem",
       "Fog",
+      "Gaze of Pain",
       "Goblin Snowman",
       "Great Wall",
       "Healing Salve",
@@ -349,38 +352,53 @@
       "Wood Elemental"
   ],
   "realObscureCard": [
-    "Arcum's Whistle",
+    "Arcum's Whistle",,
+    "Bamboozle",
     "Chaos Harlequin",
     "Cognivore",
     "Corrupted Zendikon",
     "Cruel Fate",
+    "Cunning Bandit",
     "Forest Bear",
     "Frog Tongue",
     "Goblin Bangchuckers",
+    "Gurzigost",
+    "Harabaz Druid",
+    "Hazduhr the Abbot",
+    "Hazy Homunculus",
     "Horrible Hordes",
     "Hot Soup",
     "Hubris",
     "Hundroog",
     "It That Betrays",
     "Jungle Barrier",
+    "Kezzerdrix",
     "Krark's Thumb",
     "Marble Titan",
+    "Meditation Puzzle",
     "Mindstab Thrull",
     "Mundungu",
     "Ogre Slumlord",
+    "Ooze Flux",
     "Outrage Shaman",
     "Predatory Advantage",
     "Phytotitan",
+    "Razing Snidd",
     "Rites of Initiation",
     "Royal Trooper",
+    "Saprazzan Breaker",
     "Serrated Biskelion",
     "Scalpelexis",
     "Scrambleverse",
+    "Seizures",
     "Sengir Autocrat",
+    "Sivitri Scarzam",
 		"Sosuke's Summons",
     "Spinal Villain",
+    "Squeeze",
     "Takklemaggot",
-    "That Which Was Taken"
+    "That Which Was Taken",
+    "Urza's Guilt"
   ],
   "realNotableCard": [
     "Amulet of Quoz",
@@ -414,11 +432,13 @@
     "Jade Leech",
     "Jar of Eyeballs",
     "Kaboom!",
+    "Krazy Kow",
     "Laboratory Maniac",
     "Land Tax",
     "Lhurgoyf",
     "Lost in the Woods",
     "Magmaw",
+    "Mizzium Transreliquat",
     "Mogg Fanatic",
     "Mox Lotus",
     "Nantuko Vigilante",
@@ -432,6 +452,7 @@
     "Relentless Rats",
     "Rocket-Powered Turbo Slug",
     "Rumbling Slum",
+    "Scissors Lizard",
     "Searing Flesh",
     "Shahrazad",
     "Shoving Match",
@@ -441,6 +462,7 @@
     "Tectonic Edge",
     "The Chain Veil",
     "The Cheese Stands Alone",
+    "The Ultimate Nightmare of Wizards of the Coast® Customer Service",
     "Totally Lost",
     "Turn to Frog",
     "Vial Smasher the Fierce",
@@ -448,6 +470,7 @@
     "Werebear",
     "Whipgrass Entangler",
     "Yet Another Aether Vortex",
+    "Zo-Zu the Punisher",
     "Zzzyxas's Abyss"
   ],
   "realNormalCard":
@@ -729,6 +752,7 @@
   	"Crookclaw Transmuter",
   	"Instigator Gang",
   	"Kozilek's Pathfinder",
+    "Scuzzback Marauders",
   	"Spreading Flames"
   ],
   "wishCard": ["Death Wish",
