--- a/src/data/grammar/mtg-locations.yaml
+++ b/src/data/grammar/mtg-locations.yaml
@@ -3,7 +3,6 @@
             "Muraganda", "Mercadia", "Mirrodin", "Ravnica", "Lorwyn", "Tarkir", "Vryn", "Theros", "Shadowmoor", "Phyrexia"],
   "nonPlaneLocation": [
       "Adarkar",
-      "Akroan",
       "An-Havva",
       "Aphetto",
       "Bala Ged",
@@ -108,6 +107,7 @@
       "Ghirapur",
       "Glen Elendra",
       "Goldmeadow",
+      "Gozerian",
       "Grixis",
       "Guul Draz",
       "Havengul",
