--- a/src/data/grammar/adj.yaml
+++ b/src/data/grammar/adj.yaml
@@ -7,12 +7,12 @@
         "glorious", "good", "goofy", "groundbreaking", "hackneyed", "hamfisted", "hated", "helpless", "hilarious", "idiotic",
         "inflamed", "inspired", "intriguing", "irrational", "laid-back", "laughable", "ludicrous", "unspeakable", "mortal",
         "lukewarm", "madcap", "marvelous", "menacing", "mental", "miserable", "misshapen", "moist", "morbid", "mundane", "mysterious",
-        "newfangled", "obvious", "oft-misunderstood", "old-fashioned", "ordinary", "outdated", "oversized", "pasty",
+        "newfangled", "obvious", "oft-misunderstood", "old-fashioned", "ordinary", "outdated", "oversized", "pasty", "absurd",
         "patheitc", "pathetic", "pockmarked", "pointy", "pretentious", "provocative", "questionable", "radioactive", "ramshackle",
         "refreshing", "respectable", "ridiculous", "rotten", "rough", "scaly", "scandalous", "screwball", "insane", "sensible",
         "serious", "shameful", "shocking", "sickly", "slimy", "small", "smelly", "smoking", "smooth", "snow-covered", "impractical",
         "sticky", "stinking", "sullen", "sultry", "superb", "surly","sweaty", "swollen", "tacky", "teeny-tiny", "tenacious",
-        "tepid", "terrifying", "timeless", "tiny", "two-faced", "unconventional", "unorthodox", "unstable", "vainglorious",
+        "tepid", "terrifying", "timeless", "tiny", "two-faced", "unconventional", "unorthodox", "unstable", "vainglorious", "creamy",
         "volumetric", "well-dressed", "wonderful", "world-weary", "worthless", "iron", "arcane", "foul", "handsome", "lovely",
         "graceful", "clumsy", "pleasant", "unpleasant", "elegant", "devoted", "faithful", "fickle", "persnickety", "academic"
     ]
