--- a/src/data/grammar/nouns.yaml
+++ b/src/data/grammar/nouns.yaml
@@ -35,9 +35,10 @@
       "gloom", "misery", "indigestion", "shirtlessness", "prize eligibility", "strong fashion sense", "bootlicking", "intellect",
       "snobbery", "megalomania", "pathos", "foresight", "fortitude", "charisma", "constitution", "dexterity", "self-control", "diplomacy",
       "illiteracy", "responsibility", "decay", "mutation", "magnetism", "harmony", "unrest", "immortality", "betrayal", "blasphemy",
-      "lack of self-control", "publicity", "vengeance", "violence", "advice", "applause", "innocence", "corruption", "dignity", "education", 
+      "lack of self-control", "publicity", "vengeance", "violence", "advice", "applause", "innocence", "corruption", "dignity", "education",
       "fame",  "freedom", "poor health", "hospitality", "hunger", "karate", "logic", "luck", "nonsense", "recreation", "pleasure", "pain",
-      "leisure", "revenge", "time", "traffic", "damage", "imbalance", "wrath", "illusion", "madness", "gravity", "brinksmanship"
+      "leisure", "revenge", "time", "traffic", "damage", "imbalance", "wrath", "illusion", "madness", "gravity", "brinksmanship", "vacation",
+      "anxiety"
   ],
   "emotion": [
       "anticipation", "discomfort",  "disgust", "envy", "confusion", "giddiness", "fear", "consternation", "squeamishness", "hatred",
@@ -62,7 +63,7 @@
       "portal", "hair salon", "shipwreck", "pasture", "circus tent", "fortress", "junkyard", "pillow fort", "mausoleum", "sepulcher",
       "kitchenette", "churchyard", "mortuary", "abattoir", "art studio", "pet store", "armory", "gazebo", "playground", "animal shelter",
       "gazebo", "taco stand", "pyramid", "igloo", "dude ranch", "cabin", "gas station", "tattoo parlor", "tavern", "vineyard", "drawbridge",
-      "pantry", "stairwell", "petting zoo", "supermarket", "bayou", "ziggurat"
+      "pantry", "stairwell", "petting zoo", "supermarket", "bayou", "ziggurat", "clocktower"
   ],
   "irregularPluralNoun": [
       "teeth", "feet", "pants", "geese", "fish", "children", "stimuli", "potatoes", "knives", "ashes", "riches", "hypotheses", "neuroses",
@@ -71,7 +72,7 @@
   "massNoun": [
     "land", "ichor", "water", "sand", "mana", "wood", "fire", "ice", "lightning", "phyrexian oil", "snow", "lunch", "treasure", "guacamole", "aether", "spiderwebs",
     "butterscotch", "gas", "mud", "muck", "dirt", "mildew", "gloom", "mist", "steam", "vapor", "magma", "lava", "bedrock", "topiary", "viscera", "murk", "coal",
-    "garbage", "broccoli", "whiskey", "glitter", "dust", "soil", "rain", "butter", "blood", "bile", "concrete", "earwax", "lobster meat", "#creatureTypes# meat", 
+    "garbage", "broccoli", "whiskey", "glitter", "dust", "soil", "rain", "butter", "blood", "bile", "concrete", "earwax", "lobster meat", "#creatureTypes# meat",
     "milk", "#creatureTypes# milk", "mustard", "cologne", "vape juice", "jewlery", "gasoline", "homework", "luggage", "soup", "tinfoil", "bitcoins", "bacon",
     "bread", "cardboard", "jelly", "livestock", "mayonnaise", "music", "paper", "smoke", "sugar", "underwear", "electricity", "equipment", "art supplies", "gravy",
     "furniture", "laughter", "rubbish", "junk mail", "meat", "dietary suppliments", "pasta", "pollution", "salad", "seafood", "soap", "shampoo", "stuff", "valuables",
