--- a/src/data/grammar/mtg-characters.yaml
+++ b/src/data/grammar/mtg-characters.yaml
@@ -157,7 +157,7 @@
   	"apothecary",
   	"archangel",
   	"archmage",
-    "destructor",
+    "destroyer",
   	"elder",
   	"evincar",
   	"lunarch",
