Fix typos in stupid solutions

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -158,8 +158,8 @@ tip:
   value by #stupidSolution#."
 
 stupidSolution:
-- 'adding subtle grillmarks to your #dualLand# playset'
-- 'hand washing the rules text off of every copy of #realNormalcard# you own'
+- 'adding subtle grillmarks to your #dualLands# playset'
+- 'hand washing the rules text off of every copy of #realNormalCard# you own'
 - 'letting children under #count# play with your cards'
 - 'purchasing #cardCopyCount# copies of #realBadCard# from our store for only #priceUSD#'
 - 'adding "speed holes" to your #realPowerfulCard.s# with a hole punch'
